# STM32-Bootloader

./: .gitignore  AD9833.hex  CMakeLists.txt  Makefile  blink.c  boot.s  linker_app.ld  main.c  stm32f103.h  tc-arm.cmake  utils.c  utils.h
test/: blink.ihex  bootloader.ihex  test_serial.py
